--- a/_config.yml
+++ b/_config.yml
@@ -2,4 +2,4 @@ title: Naoko Ishibashi
 logo: /assets/img/headshot_circle.png
 description: Junior Data Analyst
 show_downloads: true
-theme: jekyll_theme_minimal
+theme: jekyll-theme-minimal
