--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Naoko Ishibashi
-logo: /assets/profile.png
+logo: assets/profile_circle.png
 description: Junior Data Analyst
 show_downloads: true
 theme: jekyll-theme-minimal
